apps/base/netbox/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: app
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox
        app.kubernetes.io/component: app
    spec:
      serviceAccountName: netbox-sa
      containers:
        - name: netbox
          image: netboxcommunity/netbox:v4.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: media
              mountPath: /opt/netbox/netbox/media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: netbox-media
