apps/base/netbox/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-redis
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-redis
  namespace: netbox
  labels:
    app.kubernetes.io/name: netbox
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbox
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbox
        app.kubernetes.io/component: redis
    spec:
      serviceAccountName: netbox-sa
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
